<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_margin="20sp"
        />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        />
    <EditText
        android:id="@+id/faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/faculty"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        />
    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"

            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            />
    </RadioGroup>
    <Button
        android:id="@+id/formbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:text="@string/btn"
        android:textSize="10sp" />


</LinearLayout>